--- a/web_static/styles/3-common.css
+++ b/web_static/styles/3-common.css
@@ -1,5 +1,5 @@
 body {
-    font-color: #484848;
+    color: #484848;
     font-size: 14px;
     font-family: Circular, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
