--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -34,7 +34,10 @@ button:hover {
 }
 
 .locations {
-    border-right: 1px #DDDDDD;
+    border-right: 1px solid #DDDDDD;
+}
+h2 {
+    font-size: 16px;
 }
 
 h3 {
@@ -46,7 +49,6 @@ h4 {
 }
 
 .popover {
-    display: None;
     color: #FAFAFA;
     width: auto;
     border-color: 1px #DDDDDD;
