--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -3,19 +3,21 @@
     margin-top: 30px;
     margin-bottom: 30px;
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
 }
 
 .filters {
     background-color: white;
+    margin: auto;
     height: 70px;
     width: 100%;
-    border: 1px;
-    border-color: #DDDDDD;
+    border: 1px solid #DDDDDD;
     border-radius: 4px;
     display: flex;
-    justify-content: right;
     align-items: center;
+    position: relative;
 }
 
 button {
@@ -36,30 +38,43 @@ button:hover {
     opacity: 0.9
 }
 
-.locations, .amenities {
+.filters div.locations, .filters div.amenities {
     height: 100%;
     width: 25%;
+    padding: 10px 15px;
+    cursor: pointer;
 }
 
-.locations {
+
+.filters div.locations {
     border-right: 1px solid #DDDDDD;
 }
-h2 {
+
+ul.popover h2 {
+    font-size: 16px;
+    margin: 0 0 6px 0;
+}
+
+.filters h3 {
+    margin: 0;
+    font-weight: 600;
     font-size: 16px;
 }
 
-h3 {
-    font-weight: 600;
-}
-h4 {
+.filters h4 {
+    margin: 3px 0 0 0;
     font-weight: 400;
     font-size: 14px;
 }
 
-.popover {
+ul.popover {
     color: #FAFAFA;
     width: auto;
-    border-color: 1px #DDDDDD;
-    border-radius: 4px solid;
+    border: 1px solid #DDDDDD;
+    border-radius: 4px;
     list-style: none;
+    display: none;
+    margin: 0;
+    padding: 10px;
+    z-index: 10;
 }
