--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -1,10 +1,9 @@
 .container {
     max-width: 1000px;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    margin: 30px auto;
+    padding: 0 20px;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
 }
 
@@ -15,26 +14,24 @@
     width: 100%;
     border: 1px solid #DDDDDD;
     border-radius: 4px;
+    position: relative;
     display: flex;
     align-items: center;
-    position: relative;
 }
 
-button {
+.filters button {
     font-size: 18px;
     background-color: #FF5A5F;
     color: #FFFFFF;
     height: 48px;
-    border: 0;
+    border: none;
     width: 20%;
     border-radius: 4px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     margin-right: 30px;
     opacity: 1;
+    position: relative;
 }
-button:hover {
+.filters button:hover {
     opacity: 0.9
 }
 
